# forta-bot-sdk-v2

./: .gitignore  package-lock.json
cli/: README.md  (+3 more)
py-sdk/: .gitignore  package-lock.json  package.json  requirements.txt  setup.cfg
py-sdk/src/forta_bot/: __init__.py  di.py
py-sdk/src/forta_bot/alerts/: alert.py  alert_event.py  di.py  get_alert.py  get_alerts.py  send_alerts.py
py-sdk/src/forta_bot/blocks/: block_event.py  create_block_event.py  di.py  get_block_with_transactions.py  get_latest_block_number.py
py-sdk/src/forta_bot/cache/: cache.py  disk_cache.py  is_cache_healthy.py  json_rpc_cache.py
py-sdk/src/forta_bot/cli/: di.py  run_block.py  run_block_range.py  run_cli_command.py  run_transaction.py
py-sdk/src/forta_bot/common/: handle_block.py  handle_transaction.py
py-sdk/src/forta_bot/findings/: finding.py  finding_source.py
py-sdk/src/forta_bot/handlers/: di.py  run_handlers_on_alert.py  run_handlers_on_block.py  run_handlers_on_transaction.py
py-sdk/src/forta_bot/health/: di.py  run_health_check.py
py-sdk/src/forta_bot/jwt/: decode_jwt.py  di.py  get_rpc_jwt.py  get_scanner_jwt.py  verify_jwt.py
py-sdk/src/forta_bot/labels/: di.py  get_labels.py  label.py
py-sdk/src/forta_bot/logs/: di.py  filter_logs.py  get_logs_for_block.py  log.py
py-sdk/src/forta_bot/metrics/: __init__.py  constants.py  di.py  metrics_helper.py  metrics_manager.py  types.py
py-sdk/src/forta_bot/scanning/: di.py  should_submit_findings.py
py-sdk/src/forta_bot/traces/: di.py  get_trace_data.py  trace.py
py-sdk/src/forta_bot_sdk/: __init__.py  di.py
(+262 files in other folders)
