[metadata]
name = forta_bot_sdk
version = 0.2.3
description = Forta Detection Bot Python SDK
url = https://forta.org/
project_urls = 
    Source = https://github.com/forta-network/forta-bot-sdk-v2
    Documentation =  https://docs.forta.network/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    jsonc_parser
    web3==6.13.0
    hexbytes
    mmh3==3.0.0
    dependency-injector==4.41.0
    aiohttp==3.9.2
    pickleDB==0.9.2
    pylru==1.2.1
    msgspec==0.18.6

[options.packages.find]
where = src